<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="inbox.ChatActivity"
    tools:ignore="MergeRootFrame">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/inbox_detail_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="50dp"
                app:layoutManager="LinearLayoutManager"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:fillViewport="true"
                />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="false"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/myMessageTextField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/write_a_message"
            android:inputType="text"
            android:paddingHorizontal="10dp" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/ic_send_black_24dp"
            android:padding="20dp"
            android:scaleType="fitCenter" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
