...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        tools:context="MyAccount.Person"
        android:layout_below='@id/recyclerView'>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
...
<!--    android:layout_height="?attr/actionBarSize"-->
<!--    app:popupTheme="@style/AppTheme.PopupOverlay" />-->

<!--</com.google.android.material.appbar.AppBarLayout>-->

<!--<com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--android:id="@+id/fab"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_gravity="right|top"-->
<!--android:layout_margin="@dimen/fab_margin"-->
<!--app:srcCompat="@drawable/settings_button" />-->
